[project]
name = "nba-box-scores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "nba-api>=1.9.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
]
